--- a/github.com/mujuezhike/projectm.git/projectm/src/main/resources/application.properties
+++ b/github.com/mujuezhike/projectm.git/projectm/src/main/resources/application.properties
@@ -4,7 +4,19 @@ spring.datasource.url=jdbc:mysql://5953cfafeae91.sh.cdb.myqcloud.com:7088/projec
 spring.datasource.username=cdb_outerroot
 spring.datasource.password=Zuitongku110123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat,wall,log4j
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
